--- a/src/index.html
+++ b/src/index.html
@@ -7,5 +7,6 @@
     <body>
         <h1>Hello world!</h1>
         <div id="app"></div>
+        <script src="scripts/bundle.js" charset="utf-8"></script>
     </body>
 </html>
