--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>Pluralsight Administration</title>
+        <link rel="stylesheet" href="css/bundle.css">
     </head>
     <body>
         <h1>Hello world!</h1>
